--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -58,6 +58,17 @@ En plus de ces threads chargés de la communication, le serveur dispose aussi du
 
 \subsection{Partie B}
 
+\subsection{Serveur}
+Le déplacement des calculs de déplacement coté serveur nécessite quelques ajustements sur celui-ci. Entre autre, le serveur lance désormais un nouveau thread pour chaque client $ClientSender$ (crées en même temps que les threads écoutant les clients), chargé de communiquer à intervalle $frac{1}{server\_tickrate}$ les nouvelles positions aux clients. On ne peut en effet pas exécuter cette opération dans le thread $Game$, puisque celui-ci maintenant chargé des calculs de déplacement et de la détection de la rencontre avec l'objectif, est rafraichi à intervalle $frac{1}{server\_refresh\_tickrate}$ (qu'on a réglé à la même valeur que $refresh\_tickrate$, c'est à dire $60$, pour que les déplacements calculés par le serveur et par les clients correspondent).\\
+Il est important de noter que cette version du serveur, en plus de ne plus accepter la commande $NEWPOS$ (ne rien faire à sa reception) modifie aussi la syntaxe de la commande $TICK$. Un serveur en version ``Partie B'' ne sera donc pas compatible avec un client ``Partie A'' (et le contraire est vrai aussi, puisqu'un version ``Partie A`` du serveur n'implémenterait pas la commande $NEWCOM$).
+
+\subsection{Client}
+Le client en revanche n'a que peu changé la principale différence consiste en l'envoie des commandes $NEWCOM$ au lieu de $NEWPOS$ après la reception d'une commande $TICK$. Cela signifie donc que les commandes entrées par l'utilisateur sont stocker en attendant d'étre envoyées au serveur, plutôt qu'exécutées directement.\\
+Petite amélioration par rapport à la version précédante: comme la commande $TICK$ transmet maintenant au client la direction des véhicules ennemis, on peut maintenant l'afficher à l'écran, ce qu'on ne pouvait faire dans la version précédante.
+
+\subsection{Observations}
+Comme on l'a vu plus haut, nous avons réglé $server\_tickrate = \frac{refresh\_tickrate}{10} = \frac{server\_refresh\_tickrate}{10}$. Avec ces paramêtres, le jeu reste assez jouable, mais est assez désagréable visuellement, puisque les véhicules semblent en effet se téléporter de quelques pixels à chaque $server\_tickrate$. Le temps de réaction après l'appui sur une touche rends aussi le jeu moins agréable à jouer. On tentera d'améliorer ce problème dans l'une des extensions (calcul coté client et vérification).
+
 \subsection{Partie C}
 
 \section{Extensions}
