Implemented verified client-size calculations

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -59,11 +59,11 @@ En plus de ces threads chargés de la communication, le serveur dispose aussi du
 \subsection{Partie B}
 
 \subsection{Serveur}
-Le déplacement des calculs de déplacement coté serveur nécessite quelques ajustements sur celui-ci. Entre autre, le serveur lance désormais un nouveau thread pour chaque client $ClientSender$ (crées en même temps que les threads écoutant les clients), chargé de communiquer à intervalle $frac{1}{server\_tickrate}$ les nouvelles positions aux clients. On ne peut en effet pas exécuter cette opération dans le thread $Game$, puisque celui-ci maintenant chargé des calculs de déplacement et de la détection de la rencontre avec l'objectif, est rafraichi à intervalle $frac{1}{server\_refresh\_tickrate}$ (qu'on a réglé à la même valeur que $refresh\_tickrate$, c'est à dire $60$, pour que les déplacements calculés par le serveur et par les clients correspondent).\\
+Le déplacement des calculs de déplacement coté serveur nécessite quelques ajustements sur celui-ci. Entre autre, le thread $Game$, est maintenant simplement chargé des calculs de déplacement et de la détection de la rencontre avec l'objectif, et est rafraichi à intervalle $frac{1}{server\_refresh\_tickrate}$ (qu'on a réglé à la même valeur que $refresh\_tickrate$, c'est à dire $60$, pour que les déplacements calculés par le serveur et par les clients correspondent). Le serveur attends donc l'arrivée de commandes $NEWCOM$ sur la socket de chaque client, suite à quoi il répond au moyen d'une commande $TICK$.\\
 Il est important de noter que cette version du serveur, en plus de ne plus accepter la commande $NEWPOS$ (ne rien faire à sa reception) modifie aussi la syntaxe de la commande $TICK$. Un serveur en version ``Partie B'' ne sera donc pas compatible avec un client ``Partie A'' (et le contraire est vrai aussi, puisqu'un version ``Partie A`` du serveur n'implémenterait pas la commande $NEWCOM$).
 
 \subsection{Client}
-Le client en revanche n'a que peu changé la principale différence consiste en l'envoie des commandes $NEWCOM$ au lieu de $NEWPOS$ après la reception d'une commande $TICK$. Cela signifie donc que les commandes entrées par l'utilisateur sont stocker en attendant d'étre envoyées au serveur, plutôt qu'exécutées directement.\\
+Le client lui, nécessite l'ajout d'un nouveau thread, uniquement chargé d'envoyer les noubelles commandes $NEWCOM$ (et pas des $NEWPOS$). C'est ce nouveau thread ($Connection.commands\_sender$) qui est rafraichie à la fréquence $\frac{1}{server\_tickrate}$. L'utilisation de commandes $NEWCOM$ signifie aussi que les commandes entrées par l'utilisateur sont stocker en attendant d'étre envoyées au serveur, plutôt qu'exécutées directement.\\
 Petite amélioration par rapport à la version précédante: comme la commande $TICK$ transmet maintenant au client la direction des véhicules ennemis, on peut maintenant l'afficher à l'écran, ce qu'on ne pouvait faire dans la version précédante.
 
 \subsection{Observations}
